src/AutoStep.Compiler/Parser/AutoStepParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\AutoStepParser.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace AutoStep.Compiler.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class AutoStepParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		FEATURE=1, SCENARIO=2, SCENARIO_OUTLINE=3, EXAMPLES=4, BACKGROUND=5, TAG=6, 
		OPTION=7, NEWLINE=8, WORD=9, WS=10, TEXT_COMMENT=11, ESCAPED_TABLE_DELIMITER=12, 
		TABLE_START=13, GIVEN=14, WHEN=15, THEN=16, AND=17, ESCAPED_QUOTE=18, 
		OPEN_QUOTE=19, STATEMENT_NEWLINE=20, STATEMENT_SECTION=21, STATEMENT_WS=22, 
		STATEMENT_COMMENT=23, ARG_FLOAT=24, ARG_INT=25, ARG_ESCAPE_QUOTE=26, CLOSE_QUOTE=27, 
		ARG_EXAMPLE_START_ESCAPE=28, ARG_EXAMPLE_START=29, ARG_EXAMPLE_END_ESCAPE=30, 
		ARG_EXAMPLE_END=31, ARG_COLON=32, ARG_CURR_SYMBOL=33, ARG_TEXT_CONTENT=34, 
		ARG_WS=35, ARG_ERR_UNEXPECTEDTERMINATOR=36, CELL_FLOAT=37, CELL_INT=38, 
		ESCAPE_CELL_DELIMITER=39, CELL_DELIMITER=40, CELL_COLON=41, CELL_CURR_SYMBOL=42, 
		CELL_EXAMPLE_START_ESCAPE=43, CELL_EXAMPLE_START=44, CELL_EXAMPLE_END_ESCAPE=45, 
		CELL_EXAMPLE_END=46, CELL_TEXT_CONTENT=47, CELL_WS=48, ROW_COMMENT=49, 
		ROW_NL=50;
	public const int
		RULE_file = 0, RULE_featureBlock = 1, RULE_annotations = 2, RULE_annotation = 3, 
		RULE_featureDefinition = 4, RULE_featureTitle = 5, RULE_featureBody = 6, 
		RULE_backgroundBlock = 7, RULE_backgroundBody = 8, RULE_scenarioBlock = 9, 
		RULE_scenarioDefinition = 10, RULE_scenarioTitle = 11, RULE_scenarioBody = 12, 
		RULE_stepCollectionBodyLine = 13, RULE_statementBlock = 14, RULE_statement = 15, 
		RULE_statementBody = 16, RULE_statementSection = 17, RULE_statementArgument = 18, 
		RULE_statementArgumentBlock = 19, RULE_argumentExampleNameBody = 20, RULE_argumentExampleNameBodyContent = 21, 
		RULE_argumentBody = 22, RULE_examples = 23, RULE_exampleBlock = 24, RULE_tableBlock = 25, 
		RULE_tableHeader = 26, RULE_tableHeaderCell = 27, RULE_tableRow = 28, 
		RULE_tableRowCell = 29, RULE_tableRowCellContent = 30, RULE_headerCell = 31, 
		RULE_cellArgument = 32, RULE_cellArgumentBlock = 33, RULE_headerCellBody = 34, 
		RULE_cellExampleNameBody = 35, RULE_cellExampleNameBodyContent = 36, RULE_generalCellBody = 37, 
		RULE_text = 38, RULE_line = 39, RULE_description = 40;
	public static readonly string[] ruleNames = {
		"file", "featureBlock", "annotations", "annotation", "featureDefinition", 
		"featureTitle", "featureBody", "backgroundBlock", "backgroundBody", "scenarioBlock", 
		"scenarioDefinition", "scenarioTitle", "scenarioBody", "stepCollectionBodyLine", 
		"statementBlock", "statement", "statementBody", "statementSection", "statementArgument", 
		"statementArgumentBlock", "argumentExampleNameBody", "argumentExampleNameBodyContent", 
		"argumentBody", "examples", "exampleBlock", "tableBlock", "tableHeader", 
		"tableHeaderCell", "tableRow", "tableRowCell", "tableRowCellContent", 
		"headerCell", "cellArgument", "cellArgumentBlock", "headerCellBody", "cellExampleNameBody", 
		"cellExampleNameBodyContent", "generalCellBody", "text", "line", "description"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, "'Background:'", null, null, null, null, 
		null, null, null, null, "'Given '", "'When '", "'Then '", "'And '"
	};
	private static readonly string[] _SymbolicNames = {
		null, "FEATURE", "SCENARIO", "SCENARIO_OUTLINE", "EXAMPLES", "BACKGROUND", 
		"TAG", "OPTION", "NEWLINE", "WORD", "WS", "TEXT_COMMENT", "ESCAPED_TABLE_DELIMITER", 
		"TABLE_START", "GIVEN", "WHEN", "THEN", "AND", "ESCAPED_QUOTE", "OPEN_QUOTE", 
		"STATEMENT_NEWLINE", "STATEMENT_SECTION", "STATEMENT_WS", "STATEMENT_COMMENT", 
		"ARG_FLOAT", "ARG_INT", "ARG_ESCAPE_QUOTE", "CLOSE_QUOTE", "ARG_EXAMPLE_START_ESCAPE", 
		"ARG_EXAMPLE_START", "ARG_EXAMPLE_END_ESCAPE", "ARG_EXAMPLE_END", "ARG_COLON", 
		"ARG_CURR_SYMBOL", "ARG_TEXT_CONTENT", "ARG_WS", "ARG_ERR_UNEXPECTEDTERMINATOR", 
		"CELL_FLOAT", "CELL_INT", "ESCAPE_CELL_DELIMITER", "CELL_DELIMITER", "CELL_COLON", 
		"CELL_CURR_SYMBOL", "CELL_EXAMPLE_START_ESCAPE", "CELL_EXAMPLE_START", 
		"CELL_EXAMPLE_END_ESCAPE", "CELL_EXAMPLE_END", "CELL_TEXT_CONTENT", "CELL_WS", 
		"ROW_COMMENT", "ROW_NL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "AutoStepParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static AutoStepParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public AutoStepParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public AutoStepParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FileContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(AutoStepParser.Eof, 0); }
		public ITerminalNode[] NEWLINE() { return GetTokens(AutoStepParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(AutoStepParser.NEWLINE, i);
		}
		public FeatureBlockContext[] featureBlock() {
			return GetRuleContexts<FeatureBlockContext>();
		}
		public FeatureBlockContext featureBlock(int i) {
			return GetRuleContext<FeatureBlockContext>(i);
		}
		public ITerminalNode WS() { return GetToken(AutoStepParser.WS, 0); }
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 85;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 82; Match(NEWLINE);
					}
					} 
				}
				State = 87;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 89;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 88; featureBlock();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 91;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WS) {
				{
				State = 93; Match(WS);
				}
			}

			State = 96; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FeatureBlockContext : ParserRuleContext {
		public AnnotationsContext annotations() {
			return GetRuleContext<AnnotationsContext>(0);
		}
		public FeatureDefinitionContext featureDefinition() {
			return GetRuleContext<FeatureDefinitionContext>(0);
		}
		public FeatureBodyContext featureBody() {
			return GetRuleContext<FeatureBodyContext>(0);
		}
		public BackgroundBlockContext backgroundBlock() {
			return GetRuleContext<BackgroundBlockContext>(0);
		}
		public FeatureBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_featureBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterFeatureBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitFeatureBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFeatureBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FeatureBlockContext featureBlock() {
		FeatureBlockContext _localctx = new FeatureBlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_featureBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98; annotations();
			State = 99; featureDefinition();
			State = 101;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 100; backgroundBlock();
				}
				break;
			}
			State = 103; featureBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AnnotationsContext : ParserRuleContext {
		public AnnotationContext[] annotation() {
			return GetRuleContexts<AnnotationContext>();
		}
		public AnnotationContext annotation(int i) {
			return GetRuleContext<AnnotationContext>(i);
		}
		public AnnotationsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_annotations; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterAnnotations(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitAnnotations(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAnnotations(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AnnotationsContext annotations() {
		AnnotationsContext _localctx = new AnnotationsContext(Context, State);
		EnterRule(_localctx, 4, RULE_annotations);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 108;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 105; annotation();
					}
					} 
				}
				State = 110;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AnnotationContext : ParserRuleContext {
		public AnnotationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_annotation; } }
	 
		public AnnotationContext() { }
		public virtual void CopyFrom(AnnotationContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class BlankContext : AnnotationContext {
		public ITerminalNode NEWLINE() { return GetToken(AutoStepParser.NEWLINE, 0); }
		public BlankContext(AnnotationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterBlank(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitBlank(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlank(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OptionAnnotationContext : AnnotationContext {
		public ITerminalNode OPTION() { return GetToken(AutoStepParser.OPTION, 0); }
		public ITerminalNode NEWLINE() { return GetToken(AutoStepParser.NEWLINE, 0); }
		public ITerminalNode WS() { return GetToken(AutoStepParser.WS, 0); }
		public OptionAnnotationContext(AnnotationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterOptionAnnotation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitOptionAnnotation(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOptionAnnotation(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TagAnnotationContext : AnnotationContext {
		public ITerminalNode TAG() { return GetToken(AutoStepParser.TAG, 0); }
		public ITerminalNode NEWLINE() { return GetToken(AutoStepParser.NEWLINE, 0); }
		public ITerminalNode WS() { return GetToken(AutoStepParser.WS, 0); }
		public TagAnnotationContext(AnnotationContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterTagAnnotation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitTagAnnotation(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTagAnnotation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AnnotationContext annotation() {
		AnnotationContext _localctx = new AnnotationContext(Context, State);
		EnterRule(_localctx, 6, RULE_annotation);
		int _la;
		try {
			State = 122;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				_localctx = new TagAnnotationContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 112;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==WS) {
					{
					State = 111; Match(WS);
					}
				}

				State = 114; Match(TAG);
				State = 115; Match(NEWLINE);
				}
				break;
			case 2:
				_localctx = new OptionAnnotationContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 117;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==WS) {
					{
					State = 116; Match(WS);
					}
				}

				State = 119; Match(OPTION);
				State = 120; Match(NEWLINE);
				}
				break;
			case 3:
				_localctx = new BlankContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 121; Match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FeatureDefinitionContext : ParserRuleContext {
		public FeatureTitleContext featureTitle() {
			return GetRuleContext<FeatureTitleContext>(0);
		}
		public ITerminalNode NEWLINE() { return GetToken(AutoStepParser.NEWLINE, 0); }
		public ITerminalNode WS() { return GetToken(AutoStepParser.WS, 0); }
		public DescriptionContext description() {
			return GetRuleContext<DescriptionContext>(0);
		}
		public FeatureDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_featureDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterFeatureDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitFeatureDefinition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFeatureDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FeatureDefinitionContext featureDefinition() {
		FeatureDefinitionContext _localctx = new FeatureDefinitionContext(Context, State);
		EnterRule(_localctx, 8, RULE_featureDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 125;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WS) {
				{
				State = 124; Match(WS);
				}
			}

			State = 127; featureTitle();
			State = 128; Match(NEWLINE);
			State = 130;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				{
				State = 129; description();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FeatureTitleContext : ParserRuleContext {
		public ITerminalNode FEATURE() { return GetToken(AutoStepParser.FEATURE, 0); }
		public TextContext text() {
			return GetRuleContext<TextContext>(0);
		}
		public ITerminalNode WS() { return GetToken(AutoStepParser.WS, 0); }
		public FeatureTitleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_featureTitle; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterFeatureTitle(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitFeatureTitle(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFeatureTitle(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FeatureTitleContext featureTitle() {
		FeatureTitleContext _localctx = new FeatureTitleContext(Context, State);
		EnterRule(_localctx, 10, RULE_featureTitle);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132; Match(FEATURE);
			State = 134;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				{
				State = 133; Match(WS);
				}
				break;
			}
			State = 136; text();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FeatureBodyContext : ParserRuleContext {
		public ScenarioBlockContext[] scenarioBlock() {
			return GetRuleContexts<ScenarioBlockContext>();
		}
		public ScenarioBlockContext scenarioBlock(int i) {
			return GetRuleContext<ScenarioBlockContext>(i);
		}
		public FeatureBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_featureBody; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterFeatureBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitFeatureBody(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFeatureBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FeatureBodyContext featureBody() {
		FeatureBodyContext _localctx = new FeatureBodyContext(Context, State);
		EnterRule(_localctx, 12, RULE_featureBody);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 141;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,11,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 138; scenarioBlock();
					}
					} 
				}
				State = 143;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,11,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BackgroundBlockContext : ParserRuleContext {
		public ITerminalNode BACKGROUND() { return GetToken(AutoStepParser.BACKGROUND, 0); }
		public ITerminalNode NEWLINE() { return GetToken(AutoStepParser.NEWLINE, 0); }
		public BackgroundBodyContext backgroundBody() {
			return GetRuleContext<BackgroundBodyContext>(0);
		}
		public ITerminalNode WS() { return GetToken(AutoStepParser.WS, 0); }
		public BackgroundBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_backgroundBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.EnterBackgroundBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAutoStepParserListener typedListener = listener as IAutoStepParserListener;
			if (typedListener != null) typedListener.ExitBackgroundBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAutoStepParserVisitor<TResult> typedVisitor = visitor as IAutoStepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBackgroundBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BackgroundBlockContext backgroundBlock() {
		BackgroundBlockContext _localctx = new BackgroundBlockContext(Context, State);
		EnterRule(_localctx, 14, RULE_backgroundBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WS) {
				{
				State = 144; Match(WS);
				}
			}
